--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,32 +1,218 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
-
-@media (min-width: 100px) and (max-width: 389px){
-    body {
-        background-color: lightgreen;
+/*--------------------------------------*/
+/* -- SMALL SCREEN -- */
+@media screen and (max-width: 991px) {
+    #ms-featured-title {
+      font-size: 18px;
     }
-}
-@media (min-width: 390px) and (max-width: 575px){
-
-    /*===========   HEADER  ===================*/
-
-    /*===========    MAIN   ===================*/
-
-    /*===========   FOOTER  ===================*/
-    #foot-div {
-        background-color: black
+  /*+++++++++ BANNER +++++++++*/
+      .ms-banner {
+        margin-bottom: 4rem;
+      }  
+      .banner-intro {
+        position: absolute!important;
+        height: 100%!important;
+      }
+    /*
+      .banner-img {
+        height: 100vh!important;
+      }
+    */
+      .banner-tbox {
+        padding: 5rem 1.5rem!important;
+      }
+      .banner-th3 {
+        font-size: 30px;
+        letter-spacing: 1px;
+        margin-bottom: 2rem;
+        width: 85%;      
+      }
+      .banner-tbutton {
+        width: 200px;
+        height: 50px;
+      }
+      .banner-tbtn-p {
+        font-size: 12px;
+      }
+      .banner-tbutton svg {
+        height: 10px;
+        width: auto;
+      }
+  /*++++++ POLICY PAGES ++++++*/
+    .shopify-policy__title {
+      padding: 0 1.5rem;
+      width: 90%;
     }
-}
-@media (min-width: 576px) and (max-width: 767px){
-    body {
-        background-color: red;
+    .shopify-policy__title h1 {
+      line-height: 50px;
+      font-size: 25px;
     }
-}
-@media (min-width: 768px) and (max-width: 991px){
-    body {
-        background-color: gray;
+    .shopify-policy__body {
+      margin: 0 1.5rem;
     }
-}
+    .ms-poly-title {
+      font-size: 15px;
+    }
+    .ms-poly-p {
+      font-size: 13px;
+    }
+    .collapsible {
+      padding: 10px;
+    }
+  /*+++++++++ ABOUT US +++++++++*/
+    #ms-about {
+      margin: 4rem 1.5rem;
+    }
+    #ms-about-h1 {
+      font-size: 20px;
+    }
+    #ms-about-h2 {
+      font-size: 40px;
+    }
+    .ms-about-p {
+      width: 100%;
+    }
+  /*++++++ WHOLESALE ++++++*/
+    .page-width--narrow {
+      padding: 0!important;
+    }  
+    #ms-wholesale-banner{
+        height: 300px;
+    }
+    #ms-wholesale-title{
+        margin: 48px 1.5rem;
+        font-size: 25px;
+    }
+    #ms-wholesale-text{
+      padding: 5rem 1.5rem;
+    }
+    .ms-whs-p{
+        font-size: 15px;
+    }
+    #ms-whs-work{
+        display: block;
+        padding: 5rem 0;
+    }
+    .ms-whs-wdiv{
+        width: 100%;
+    }
+    #ms-whs-wh2{
+        padding: 3rem 1.5rem;
+        line-height: 40px;
+        font-size: 20px;
+    }
+    .ms-whs-wp{
+        font-size: 15px;
+        line-height: 30px;
+        padding: 0 1.5rem;
+    } 
+    .ms-whs-wbtn {
+      padding: 2rem 3rem;
+      margin: 3rem 1.5rem;
+    }
+    #ms-whs-knowmore{
+        padding: 0 1.5rem;
+    }
+    #ms-whs-ktitle{
+        padding: 5rem 0;
+    }
+    #ms-whs-kh2{
+        font-size: 20px;
+        line-height: 40px;
+    }
+    .ms-whs-kp{
+        font-size: 15px;
+    }
+    #ms-whs-kform{
+        width: 100%;
+    }
+  /*+++++++++ CONTACT +++++++++*/
+    #ms-contact-div {
+      margin: 4rem 1.5rem;
+    }
+    #ms-contact-fh1 {
+      font-size: 18px;
+      margin: 1rem 0;
+    }
+    #ms-contact-fh2 {
+      font-size: 25px;
+      margin: 2rem 0;
+      width: 80%;
+      line-height: 50px;
+    }  
+    .ms-contact-formdiv {
+      margin: 3rem 1.5rem;
+    }  
+    /*+++++++++++ FOOTER +++++++++++++*/
+    .drop-nav {
+      display: none;
+    }
+    .gp-footer {
+      padding: 5rem 1.5rem;
+    }
+    .footer-logo {
+      max-width: 150px!important;
+      height: auto!important;
+    }
+    .social-wrapper {
+      margin-top: 2rem;
+    }
+    .social-wrapper a {
+      margin-right: 3rem;
+      text-decoration: none;
+    }
+  
+    /*---gp-column-mobile----*/
+    .gp-column {
+      margin-top: 5rem;
+    }
+    .column__accordion {
+      margin: 2rem 0;
+    }
+    .accordion-ul {
+      padding-left: 0!important;
+    }
+    .accordion-li {
+      list-style: none!important;
+    }
+    .accordion-li a {
+      text-decoration: none;
+    }
+    .footer-contact {
+      margin-top: 5rem;
+    }
+    .column h3, .accordion-h2 {
+      font-size: 14px;
+      font-weight: 500;
+      letter-spacing: 2px;
+      color: white;
+      font-family: Poppins, sans-serif;
+    }
+    .column ul {
+      padding: 0;
+    }
+    .column li {
+      list-style: none;
+    }
+    .column a {
+      text-decoration: none;
+      color: white;
+    }
+    .address {
+      margin-top: 5rem;
+      font-size: 14px;
+    }
+    /*---gp-column-mobile----*/
+    
+    .gp-footer-cr {
+      background-color: white;
+      color: black;
+      text-align: center;
+      padding: 2rem 2.5rem;
+    }
+    .cr-1 {
+      font-size: 14px;
+      font-weight: 500;
+      margin-bottom: 1rem;
+    }
+    /*------- END*/ 
+  }
