MS Web (Main page)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>

--- a/styles/ms.css
+++ b/styles/ms.css
@@ -104,9 +104,9 @@ body {
     font-size: 15px;
     display: block;
   }
-  .active, .collapsible:hover {
+  /* .active, .collapsible:hover {
     background-color: #E0F8EC;
-  }
+  } */
   .content {
     padding: 10px 20px;
     display: none;
