--- a/styles/maintenance.css
+++ b/styles/maintenance.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(40deg, rgb(255, 255, 255), rgb(195, 255, 218));
 }
 main {
-    background: url(../images/maintenance/MS-IMG-Maintenance.svg);
+    background: url(https://misionessabor.com/images/maintenance/MS-IMG-Maintenance.svg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
