--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,41 +1,43 @@
 header {
     position: relative;
 }
-
 #ms-contact-fh1,
 #ms-contact-fh2 {
     text-transform: uppercase;
 }
-
 #ms-contact-fh1{
     font-weight: 500;
 }
-
 #ms-contact-fh2{
     font-weight: 700;
 }
-
+.ms-contact-fp {
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin: 1rem 0;
+}
 .ms-contact-fp a {
     color: black;
 }
 
-@media screen and (max-width: 991) {
+@media screen and (max-width: 991px) {
     #ms-contact-div {
         margin: 4rem 1.5rem;
     }
-
     #ms-contact-fh1 {
         font-size: 20px;
         margin: 1rem 0;
     }
-
     #ms-contact-fh2 {
-        font-size: 40px;
+        font-size: 35px;
         margin: 2rem 0;
         width: 80%;
         line-height: 50px;
     }
-
+    .ms-contact-fp {
+        font-size: 16px;
+        line-height: 30px;
+    }
     .ms-contact-formdiv {
         margin: 3rem 1.5rem;
     }
@@ -45,11 +47,9 @@ header {
     #ms-contact-div {
         margin: 4rem 4%;
     }
-
     #ms-contact-fh1 {
         font-size: 25px;
     }
-
     #ms-contact-fh2 {
         font-size: 45px;
         margin: 1.5rem 0;
@@ -57,15 +57,10 @@ header {
         line-height: 70px;
         letter-spacing: 4px;
     }
-
     .ms-contact-fp {
-        font-weight: 400;
         font-size: 16px;
-        letter-spacing: 1px;
         line-height: 30px;
-        margin: 1rem 0;
     }
-
     .ms-contact-formdiv {
         margin: 3rem 5rem;
         max-width: 60%important;
