--- a/styles/footer.css
+++ b/styles/footer.css
@@ -30,11 +30,12 @@
     }
     .accordion-li {
       list-style: none!important;
-      margin: 1rem;
+      margin: 0.5rem 0;
     }
     .accordion-li a {
       text-decoration: none;
       color: white;
+      font-size: 12px;
     }
     /* base-details-summary */
     summary {
@@ -52,7 +53,13 @@
       display: none;
     }    
     .footer-contact {
-      margin-top: 4rem;
+      margin-top: 2rem;
+    }
+    .footer-contact li {
+      margin: 0.5rem 0;
+    }
+    .footer-contact a {
+      font-size: 12px;
     }
     .column h3, .accordion-h2 {
       font-size: 14px;
@@ -73,7 +80,7 @@
       color: white;
     }
     .address {
-      margin-top: 5rem;
+      margin-top: 2rem;
       font-size: 14px;
       color: white;
     }
@@ -82,13 +89,18 @@
       background-color: white;
       color: black;
       text-align: center;
-      padding: 2rem 2.5rem;
+      padding: 1.5rem 4%;
     }
     .cr-1 {
       font-size: 14px;
       font-weight: 500;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }    
+    .cr-2 {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 }
 @media screen and (min-width: 992px){
       /*++++++++ FOOTER ++++++++++++*/
