--- a/styles/products.css
+++ b/styles/products.css
@@ -8,19 +8,78 @@
 }
 .ms-prd-img img{
     width: auto;
-    height: 10vh;
+    height: 100vh;
 }
 .ms-product-dta{
     height: auto;
     width: 100%;
     padding: 3rem 5rem;
 }
-.ms-prd-h1{
+.ms-product-divcontent {
     border-top: 4px solid #000;
-    padding-top: 32px;
+}
+.ms-prd-h1{
+    margin: 2rem 0;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 700;
     font-size: 36px;
     line-height: 46px;
 }
+
+.ms-prd-price{
+    font-size: 22px;
+    margin: 2rem 0;
+}
+
+.ms-prd-h2{
+    font-size: 21px;
+    font-weight: 600;
+    padding-bottom: 5px;
+}
+
+.ms-prd-p{
+    letter-spacing: 1px;
+    line-height: 25px;
+    margin-bottom: 2rem;
+}
+
+.ms-prd-drop-title{
+    color: black;
+    font-size: 20px;
+    padding-left: 1rem;
+}
+
+.ms-prd-drop-div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    border-top: black solid 1px ;
+    padding: 1rem 0;
+}
+.ms-prd-divtitle {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.ms-prd-drop-div i{
+    font-size: 20px;
+    color: #000;
+}
+.collapsible{
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    display: block;
+    text-decoration: none;
+}
+
+.ms-prd-drop-content{
+    display: none;
+    padding: 1rem 0;
+} 
