MS Update (Shop & Product Pages)
Co-authored-by: Kevin Duncke <kevinduncke@gmail.com>
Co-authored-by: Roger Duncke <RogerDuncke@users.noreply.github.com>

--- a/styles/ms.css
+++ b/styles/ms.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Poppins', sans-serif!important;
   margin: 0;
   padding: 0;
-  background-color: #edeeed;
+  background-color: hsl(120, 3%, 93%);
 }
 /*--------------------------------------*/
 /*------------ GLOBAL SCREEN  ----------*/
