MS Update 7 (Header O'Pages Relative)

--- a/styles/policies.css
+++ b/styles/policies.css
@@ -1,3 +1,7 @@
+header {
+    position: relative!important;
+}
+
 .shopify-policy__container {
     width: 100% !important;
     max-width: 100% !important;
