--- a/styles/footer.css
+++ b/styles/footer.css
@@ -35,7 +35,7 @@
     .accordion-li a {
       text-decoration: none;
       color: white;
-      font-size: 12px;
+      font-size: 13px;
     }
     /* base-details-summary */
     summary {
@@ -100,6 +100,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
+      justify-content: space-between;
     }
 }
 @media screen and (min-width: 992px){
