--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@ header {
     background-color: white;
     width: inherit;
     margin: 0;
-    padding: 0.8% 4%;
+    padding: 2.8% 4%;
     border-bottom: 2px solid rgb(250, 250, 250);
 }
 .cont-navbar {
@@ -30,6 +30,9 @@ header {
     letter-spacing: 1px;
 }
 @media screen and (max-width: 991px) {
+    header {
+        position: relative;
+    }
     .navbar-nav {
         padding: 1rem 0;
     }
