--- a/styles/policies.css
+++ b/styles/policies.css
@@ -79,12 +79,11 @@ header {
         margin: 1rem;
         line-height: 25px;
     }
-    .shopify-policy__body {
-        margin: 0 1.5rem;
-    }
     .ms-poly-title {
         font-size: 15px;
         margin: 1rem 0;
+        margin: 1rem;
+        line-height: 25px;
     }
     .ms-poly-p {
         font-size: 13px;
