--- a/styles/policies.css
+++ b/styles/policies.css
@@ -75,7 +75,7 @@ header {
     }
     .shopify-policy__title h1 {
         font-size: 25px;
-        margin: 1rem;
+        margin: 1rem 0;
         line-height: 25px;
     }
     .ms-poly-dropcontent img {
